--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"pug-loader": "^2.4.0",
 		"sass-loader": "^7.1.0",
 		"style-loader": "0.23.1",
+		"stylelint": "^9.10.1",
 		"uglifyjs-webpack-plugin": "^2.0.1",
 		"webpack": "^4.20.2",
 		"webpack-cli": "^3.1.2",
