🔧 Add stylelint and eslint autofix scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "This is a boilerplate for simple web project need modern tooling and no overkill framework",
 	"scripts": {
 		"start": "cross-env NODE_ENV=development webpack-dev-server --content-base=./dist --open --open-page=./ --inline --watch --hot",
-		"build": "cross-env NODE_ENV=production webpack --watch"
+		"build": "cross-env NODE_ENV=production webpack --watch",
+		"stylelint-fix": "stylelint \"src/**/*.scss\" --fix",
+		"eslint-fix": "eslint \"src/**/*.js\" --fix"
 	},
 	"author": "Eky Kwan <eky@eky.hk>",
 	"homepage": "https://github.com/eky/plain-web#readme",
